--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
     display: flex;
     align-items:  center; 
     cursor: pointer;
-    background: #dcb669;  
+    background: white;  
     position: sticky;
     top: 0px;
     justify-content: space-evenly;
@@ -175,7 +175,7 @@ nav ul li {
 .feature-img{
     object-fit: cover;
     object-position: 0px;
-    height: 80vh;
+    height: 60vh;
     width: 100%;
     border-radius: 20px 0px 20px 0px;
    
@@ -306,11 +306,11 @@ button{
     width:100% ;
    
     height: 400px;
-    background-color: rgb(95, 72, 41);
+    background-color: white;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .title {
-    color: #e7dcc4;
+    color: #2b1700;
     text-align: center;
     text-decoration: #e7dcc4;
     font-size: 25px;
@@ -321,7 +321,7 @@ button{
     text-align: center;
     text-decoration: #e7dcc4;
     font-size: 20px;
-    color: #e7dcc4;
+    color:#2b1700;
   
     
 } 
@@ -338,15 +338,17 @@ button{
     height: 110px;
     width: 190px;
     padding:20px 35px;
-   background:#dcb669;
-    border-radius: 20px;
+  /* background:#dcb669; */
+   border-style:solid ;
+ 
+   border-color:#dcb669;
+   border-width:2px;
     margin: 15px; 
-    flex: 1;
-    transition: 0.2s;  
+
+ 
     overflow: hidden;
     text-align: center;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
- 
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
 /*.card:hover {
     flex: 3;
@@ -470,7 +472,7 @@ border-radius: 20px;
     width: auto;
     margin-top: px;
     font-weight: 900px;
-    background: #dcb669;
+    background:white;
    
 }
 
